[package]
name = "tyrfing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["space_saving", "default_modes"]
logging = ["dep:ufmt"]
space_saving = ["time_u32"]
time_u32 = []
has_fet = []

default_modes = ["mode_fade"]

mode_strobe = []
mode_fade = []

[dependencies]
avr-device = { version = "0.5.3", features = ["rt", "attiny1616", "critical-section-impl"] }

embassy-executor = { features = ["nightly", "arch-avr", "executor-thread", "turbowakers" ], git = "https://github.com/simmsb/embassy", branch = "32bit" }
embassy-time = { git = "https://github.com/simmsb/embassy", branch = "32bit" }
embassy-time-driver = { features = ["tick-hz-1_024"], git = "https://github.com/simmsb/embassy", branch = "32bit" }
embassy-time-queue-driver = { git = "https://github.com/simmsb/embassy", branch = "32bit" }
embassy-sync = { git = "https://github.com/simmsb/embassy", branch = "32bit", features = ["turbowakers"] }
embassy-futures = { git = "https://github.com/simmsb/embassy", branch = "32bit" }

# embassy-executor = { features = ["nightly", "arch-avr", "executor-thread", "turbowakers" ], path = "vendor/embassy/embassy-executor" }
# embassy-time = { version = "0.3.0", path = "vendor/embassy/embassy-time" }
# embassy-time-driver = { version = "0.1.0", features = ["tick-hz-1_024"], path = "vendor/embassy/embassy-time-driver" }
# embassy-time-queue-driver = { version = "0.1.0", path = "vendor/embassy/embassy-time-queue-driver" }
# embassy-sync = { path = "vendor/embassy/embassy-sync", features = ["turbowakers"] }
# embassy-futures = { path = "vendor/embassy/embassy-futures" }

env_int = "0.1.0"
futures-util = { version = "0.3.30", default-features = false, features = ["portable-atomic"] }
portable-atomic = { version = "1.6.0", default-features = false, features = ["unsafe-assume-single-core"] }
atxtiny-hal = "*"
fugit = { version = "0.3.7", default-features = false }
ufmt = { version = "0.2.0", optional = true }
bitfield-struct = "0.5.6"
avr-progmem = "0.4.0"
embedded-io = "0.6.1"
paste = "1.0.14"

cichlid = { git = "https://github.com/simmsb/cichlid", version = "0.2.1", default-features = false, features = [
    "nightly",
    "no-std",
] }
fixed = "1.25.1"

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal.git"
rev = "4dbd683dc335f9ad40d66c974d9baac1bc143a34"

[patch.crates-io]
avr-device = { path = "vendor/avr-device" }
atxtiny-hal = { path = "vendor/atxtiny-hal" }

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
debug = true
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
